--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,21 @@
 
 RewriteEngine On
-RewriteBase /
+# RewriteBase /
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^.]+)$ $1.php [NC,L]
-RewriteRule ^([^.]+)$ $1.html [NC,L]
+# Remove .php extension
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.+)$ $1.php [L,QSA]
 
-#RewriteCond %{THE_REQUEST} /([^.]+)\.php [NC]
-#RewriteRule ^ /%1 [NC,L,R]
+# To externally redirect /dir/file.php to /dir/file
+RewriteCond %{THE_REQUEST} \s/+(.+?)\.php[\s?] [NC]
+RewriteRule ^ /%1 [R=302,L,NE]
 
-#RewriteCond %{REQUEST_FILENAME}.php -f
-#RewriteRule ^ %{REQUEST_URI}.php [NC,L]
-#RewriteRule ^ %{REQUEST_URI}.html [NC,L]
+# Remove .html extension
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.+)$ $1.html [L,QSA]
+
+# To externally redirect /dir/file.html to /dir/file
+RewriteCond %{THE_REQUEST} \s/+(.+?)\.html[\s?] [NC]
+RewriteRule ^ /%1 [R=302,L,NE]
